--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
         <a href="https://www.instagram.com/ipannnsinaba/?hl=id">instagram</a>
         <a href="#contact">tik-tok</a>
         <a href="#contact">twitter</a>
+        <a href="mailto:ivanganteng845@gmail.com">email</a>
         <a href="https://wa.me/6285163106255">whatsapp</a>
         <a href="#contact">linked-in</a>
       </div>
